--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.0",
+    "clipboard": "^2.0.1",
     "flux": "^3.1.3",
     "formsy-react": "^1.1.4",
+    "jquery": "^3.3.1",
     "moment": "^2.22.1",
     "prop-types": "^15.6.1",
+    "query-string": "^6.1.0",
     "react": "^16.3.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-calendar": "^2.14.0",
     "react-date-picker": "^6.10.1",
     "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.2",
+    "react-infinite-calendar": "^2.3.1",
     "react-scripts": "1.1.4",
     "reactstrap": "^5.0.0-beta.3",
     "semantic-ui-calendar": "0.0.8",
