--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bootstrap": "^4.1.0",
     "clipboard": "^2.0.1",
+    "create-react-class": "^15.6.3",
     "flux": "^3.1.3",
     "formsy-react": "^1.1.4",
     "jquery": "^3.3.1",
@@ -21,6 +22,8 @@
     "react-dom": "^16.3.2",
     "react-infinite-calendar": "^2.3.1",
     "react-scripts": "1.1.4",
+    "react-select": "^1.2.1",
+    "react-virtualized-select": "^3.1.3",
     "reactstrap": "^5.0.0-beta.3",
     "semantic-ui-calendar": "0.0.8",
     "semantic-ui-css": "^2.3.1",
