--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^1.1.0"
+    "eslint": "^5.6.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^2.6.2",
+    "gh-pages": "^1.1.0",
+    "prettier": "^1.14.3"
   }
 }
