--- a/package.json
+++ b/package.json
@@ -6,31 +6,19 @@
   "dependencies": {
     "bootstrap": "^4.1.0",
     "clipboard": "^2.0.1",
-    "create-react-class": "^15.6.3",
-    "flux": "^3.1.3",
-    "formsy-react": "^1.1.4",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "moment": "^2.22.1",
-    "prop-types": "^15.6.1",
-    "query-string": "^6.1.0",
     "react": "^16.3.2",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-calendar": "^2.14.0",
-    "react-date-picker": "^6.10.1",
     "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.2",
-    "react-infinite-calendar": "^2.3.1",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "react-select": "^1.2.1",
     "react-virtualized-select": "^3.1.3",
     "reactstrap": "^5.0.0-beta.3",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "semantic-ui-calendar": "0.0.8",
-    "semantic-ui-css": "^2.3.1",
-    "semantic-ui-react": "^0.79.1"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
